
* master *

* Add activity_stats method that mimics the SQL Server Activity Monitor. Fixes #146 [Joe Rafaniello]

* Add methods for sqlserver's #product_version, #product_level, #edition and include them in inspect.
  Fixes #145 [Joe Rafaniello]
  
* Handle statements that cannot be retried on a new database connection by not reconnecting. 
  Fixes #147 [Joe Rafaniello]
  
* Added connection#spid for debugging. Fixes #144 [Joe Rafaniello]

* Add ENV['TEST_FILES'] to Rakefile for easy single case tests. [Joe Rafaniello]

* Pass ActiveRecord tests. Made windowed distinct pass all orders to groups.
  - test_limited_eager_with_multiple_order_columns
  - test_limited_eager_with_order

* Pass AR tests by moving DISTINCT to GROUP BY in windowed SQL.
  - test_count_eager_with_has_many_and_limit_and_high_offset
  - test_eager_with_has_many_and_limit_and_high_offset


* 3.1.3 *

* Distinguish between identity and primary key key columns during schema reflection. Allows us 
  us to only do identity inserts when technically needed. Fixes #139 [chadcf] & [joncanady]


* 3.1.2 *

* Fix SQL Azure conflicts with DBCC useroptions. Use new #user_options_xyz methods. [kazamachi]

* Fix identity inserts for tables with natural PKs. [Gian Carlo Pace]

* Create a #configure_connection method that can be overridden. Think "SET TEXTSIZE...".

* Create a #configure_application_name method that can be overridden for unique TinyTDS app names

* Fixed the #finish_statement_handle to cancel the TinyTDS connection if needed.


* 3.1.1 *

* Make #rollback_db_transaction smarter.

* Provide a method to override for the quoted string prefix. Not a config because trumping this method will 
  have drastically bad results. Fixes #124

* Allow :limit/:offset to be used with fully qualified table and column in :select.


* 3.1.0 *

* Add support/test around handling of float/real column types [Lucas Maxwell]

* Make auto reconnect duration configurable. Fixes #109 [David Chelimsky]
